--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
 <body>
 
 <div class="w3-container">
-  <h2>Active Tabs</h2>
-  <p>To highlight the current tab/page the user is on, add a color class, and use JavaScript to update the active link.</p>
-
   <div class="w3-bar w3-white">
     <button class="w3-bar-item w3-button tablink w3-white" onclick="openCity(event,'1v')">Primera vuelta</button>
     <button class="w3-bar-item w3-button tablink" onclick="openCity(event,'2v')">Segunda vuelta</button>
   
-  <div id="1v" class="w3-container w3-border city">
+  <div id="1v" class="w3-container city">
     <div class="w3-container">
   <table class="w3-table-all w3-card-4  w3-centered">
     <tr class="w3-purple">
@@ -104,7 +101,7 @@
   </div>
   </div>
 
-  <div id="2v" class="w3-container w3-border city" style="display:none">
+  <div id="2v" class="w3-container city" style="display:none">
     <div class="w3-container">
   <table class="w3-table-all w3-card-4  w3-centered">
     <tr class="w3-purple">
