--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS</title>
+<title>Calendario</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
@@ -100,7 +100,7 @@
 
   </div>
   </div>
-
+  </br>
   <div id="2v" class="w3-container city" style="display:none">
     <div class="w3-container">
   <table class="w3-table-all w3-card-4  w3-centered">
@@ -182,7 +182,7 @@
       <th>22</th>
       <th>Grecia</th>
       <th>
-      <button class="w3-button w3-small w3-circle w3-purple">+</button>
+      <button onclick="document.getElementById('Jx').style.display='block'" href="" class="w3-button w3-small w3-circle w3-purple">+</button>
       </th>
     </tr>   
       
@@ -225,6 +225,7 @@
       </div>
     </div>
 </div>
+  </br>
   <h6> El detalle estará disponible 24 horas después de finalizado el compromiso</h6>
 <script>
 function openCity(evt, cityName) {
