--- a/store.html
+++ b/store.html
@@ -19,23 +19,6 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 </style>
 <body>
 
-<!-- Links (sit on top) -->
-<div class="w3-top">
-  <div class="w3-row w3-large w3-light-grey">
-    <div class="w3-col s3">
-      <a href="#" class="w3-button w3-block">INICIO</a>
-    </div>
-    <div class="w3-col s3">
-      <a href="#productos" class="w3-button w3-block">PRODUCTOS</a>
-    </div>
-    <div class="w3-col s3">
-      <a href="#nosotros" class="w3-button w3-block">NOSOTROS</a>
-    </div>
-    <div class="w3-col s3">
-      <a href="#contacto" class="w3-button w3-block">CONTACTO</a>
-    </div>
-  </div>
-</div>
 
 <!-- Content -->
 <div class="w3-content" style="max-width:1100px;margin-top:80px;margin-bottom:80px">
@@ -48,7 +31,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
   <!-- Slideshow -->
   <div class="w3-container">
     <div class="w3-display-container">
-      <img src="/w3images/coffee.jpg" style="width:100%">
+      <img src="https://alutecs.com/tecmedia/2018/03/ecommerce-trends-1024x500-1024x500.jpg" style="width:100%">
       </div>
     </div>
 
@@ -61,39 +44,39 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 
 <div class="w3-third w3-margin-bottom">
       <div class="w3-card-4">
-        <img src="/w3images/team3.jpg" alt="Jane" style="width:100%">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Number_1_in_green_rounded_square.svg/200px-Number_1_in_green_rounded_square.svg.png" alt="Jane" style="width:100%">
         <div class="w3-container">
           <h3>PRODUCTO 1</h3>
           <p class="w3-opacity">$40.00</p>
           <p>Descripción del producto 1</p>
           <p><button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="1"
-    data-item-name="PRODUCTO 1" data-item-price="40.00" data-item-description="producto 1">COMPRAR</button></p>
+    data-item-name="PRODUCTO 1" data-item-price="40.00" data-item-description="producto 1" data-item-url="https://yosoywill.github.io/chatphp/store">COMPRAR</button></p>
         </div>
       </div>
     </div>
 
 <div class="w3-third w3-margin-bottom">
       <div class="w3-card-4">
-        <img src="/w3images/team3.jpg" alt="Jane" style="width:100%">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvan5I1_IdrrkhfUt1P-Ce7wUe-S9fLZukzSv-o5fV71bcgePy" alt="Jane" style="width:100%">
         <div class="w3-container">
           <h3>PRODUCTO 2</h3>
           <p class="w3-opacity">$100.00</p>
           <p>Descripción del producto 2</p>
           <p><button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="2"
-    data-item-name="PRODUCTO 2" data-item-price="100.00" data-item-description="producto 2">COMPRAR</button></p>
+    data-item-name="PRODUCTO 2" data-item-price="100.00" data-item-description="producto 2" data-item-url="https://yosoywill.github.io/chatphp/store">COMPRAR</button></p>
         </div>
       </div>
     </div>
 
     <div class="w3-third w3-margin-bottom">
       <div class="w3-card-4">
-        <img src="/w3images/team3.jpg" alt="Jane" style="width:100%">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/Number_3_in_yellow_rounded_square.svg/200px-Number_3_in_yellow_rounded_square.svg.png" alt="Jane" style="width:100%">
         <div class="w3-container">
           <h3>PRODUCTO 3</h3>
           <p class="w3-opacity">$10.00</p>
           <p>Descripción del producto 3</p>
           <p><button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="3"
-    data-item-name="PRODUCTO 3" data-item-price="10.00" data-item-description="producto 1">COMPRAR</button></p>
+    data-item-name="PRODUCTO 3" data-item-price="10.00" data-item-description="producto 1" data-item-url="https://yosoywill.github.io/chatphp/store">COMPRAR</button></p>
         </div>
       </div>
     </div>
