--- a/store.html
+++ b/store.html
@@ -17,30 +17,43 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 .w3-tag, .fa {cursor:pointer}
 .w3-tag {height:15px;width:15px;padding:0;margin-top:6px}
 </style>
-<body>
+<body class="w3-light-grey w3-content" style="max-width:1600px">
 
+<!-- Sidebar/menu -->
+<nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
+  <h3 class="w3-padding-64 w3-center"><b>WILL</b> store</h3>
+  <a href="#productos" onclick="w3_close()" class="w3-bar-item w3-button">PRODUCTOS</a> 
+  <a href="#sobre" onclick="w3_close()" class="w3-bar-item w3-button">SOBRE</a> 
+  <a href="#contacto" onclick="w3_close()" class="w3-bar-item w3-button">CONTACTO</a>
+  <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-button snipcart-checkout">CARRITO</a>
+</nav>
 
-<!-- Content -->
-<div class="w3-content" style="max-width:1100px;margin-top:80px;margin-bottom:80px">
+<!-- Top menu on small screens -->
+<header class="w3-container w3-top w3-hide-large w3-white w3-xlarge w3-padding-16">
+  <span class="w3-left w3-padding"><b>WILL</b> store</span>
+  <a href="javascript:void(0)" class="w3-right w3-button w3-white" onclick="w3_open()">☰</a>
+</header>
 
-  <div class="w3-panel">
-    <h1><b>TIENDA DEMO</b></h1>
-    <p>Will</p>
+<!-- Overlay effect when opening sidebar on small screens -->
+<div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+
+<!-- !PAGE CONTENT! -->
+<div class="w3-main" style="margin-left:300px">
+
+  <!-- Push down content on small screens --> 
+  <div class="w3-hide-large" style="margin-top:83px"></div>
+<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+  <img class="w3-image" src="https://alutecs.com/tecmedia/2018/03/ecommerce-trends-1024x500-1024x500.jpg" alt="store" width="1500" height="800">
+  <div class="w3-display-middle w3-margin-top w3-center">
+    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>WILL</b></span> <span class="w3-hide-small w3-text-light-grey">store</span></h1>
   </div>
+</header>
 
-  <!-- Slideshow -->
-  <div class="w3-container">
-    <div class="w3-display-container">
-      <img src="https://alutecs.com/tecmedia/2018/03/ecommerce-trends-1024x500-1024x500.jpg" style="width:100%">
-      </div>
-    </div>
+  <!-- Project Section -->
+  <div class="w3-row-padding" id="productos">
 
-  
-  <!-- Grid -->
-  <div class="w3-row-padding" id="about">
-    <div class="w3-center w3-padding-64">
-      <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Who We Are</span>
-    </div>
+      <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">PRODUCTOS</h3>
+
 
 <div class="w3-third w3-margin-bottom">
       <div class="w3-card-4">
@@ -82,50 +95,59 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
     </div>
   </div>
 
-  <!-- Contact -->
-  <div class="w3-center w3-padding-64" id="contact">
-    <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Contact Us</span>
+  <!-- About Section -->
+  <div class="w3-container w3-padding-32" id="sobre">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">SOBRE</h3>
+    <p>Esta es una tienda de ejemplo sobre como poder desarrollar un sitio web para comercio Online
+    </p>
   </div>
 
-  <form class="w3-container" action="/action_page.php" target="_blank">
-    <div class="w3-section">
-      <label>Name</label>
-      <input class="w3-input w3-border w3-hover-border-black" style="width:100%;" type="text" name="Name" required>
-    </div>
-    <div class="w3-section">
-      <label>Email</label>
-      <input class="w3-input w3-border w3-hover-border-black" style="width:100%;" type="text" name="Email" required>
-    </div>
-    <div class="w3-section">
-      <label>Subject</label>
-      <input class="w3-input w3-border w3-hover-border-black" style="width:100%;" name="Subject" required>
-    </div>
-    <div class="w3-section">
-      <label>Message</label>
-      <input class="w3-input w3-border w3-hover-border-black" style="width:100%;" name="Message" required>
-    </div>
-    <button type="submit" class="w3-button w3-block w3-black">Send</button>
-  </form>
 
+  <!-- Contact Section -->
+  <div class="w3-container w3-padding-32" id="contacto">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">CONTACTO</h3>
+    <p>Lets get in touch and talk about your next project.</p>
+    <form action="/action_page.php" target="_blank">
+      <input class="w3-input w3-border" type="text" placeholder="nombre" required name="Name">
+      <input class="w3-input w3-section w3-border" type="text" placeholder="correo" required name="Email">
+      <input class="w3-input w3-section w3-border" type="text" placeholder="asunto" required name="Subject">
+      <input class="w3-input w3-section w3-border" type="text" placeholder="comentario" required name="Comment">
+      <button class="w3-button w3-black w3-section" type="submit">
+        <i class="fa fa-paper-plane"></i> ENVIAR MENSAJE
+      </button>
+    </form>
+  </div>
+ <script
+  type="text/javascript"
+  id="snipcart"
+  src="https://cdn.snipcart.com/scripts/2.0/snipcart.js"
+  data-api-key="YjE4M2MzNWYtYzllZi00ZGM2LWJmYWQtYmM0MTE3YjUwZjBiNjM2OTAzNjA1NzIxODEyMDQy"
+  data-autopop="false">
+  </script>
+<!-- Image of location/map -->
+
+
+<!-- End page content -->
 </div>
 
-<!-- Footer -->
 
-<footer class="w3-container w3-padding-32 w3-light-grey w3-center">
-  <h4>Footer</h4>
-  <a href="#" class="w3-button w3-black w3-margin"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-  </div>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-16">
+  <p>Hecho por Will con W3.css y Snipcart</p>
 </footer>
 
-
+<script>
+// Script to open and close sidebar
+function w3_open() {
+  document.getElementById("mySidebar").style.display = "block";
+  document.getElementById("myOverlay").style.display = "block";
+}
+ 
+function w3_close() {
+  document.getElementById("mySidebar").style.display = "none";
+  document.getElementById("myOverlay").style.display = "none";
+}
+</script>
 
 
 </body>
