--- a/store.html
+++ b/store.html
@@ -26,6 +26,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
   <a href="#sobre" onclick="w3_close()" class="w3-bar-item w3-button">SOBRE</a> 
   <a href="#contacto" onclick="w3_close()" class="w3-bar-item w3-button">CONTACTO</a>
   <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-button snipcart-checkout">CARRITO</a>
+  <a href="#" onclick="document.getElementById('id01').style.display='block'" class="w3-bar-item w3-button w3-button">SUMMARY</a>
 </nav>
 
 <!-- Top menu on small screens -->
@@ -124,8 +125,26 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
   data-api-key="YjE4M2MzNWYtYzllZi00ZGM2LWJmYWQtYmM0MTE3YjUwZjBiNjM2OTAzNjA1NzIxODEyMDQy"
   data-autopop="false">
   </script>
-<!-- Image of location/map -->
-
+<!-- modal -->
+  <div id="id01" class="w3-modal">
+    <div class="w3-modal-content">
+      <div class="w3-container">
+        <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">&times;</span>
+        <div class="snipcart-summary">
+    <a href="#" class="snipcart-user-email snipcart-user-profile">
+        RESUMEN
+    </a>
+</div>
+<div>
+    CONTENIDO
+</div>
+<div class="snipcart-summary">
+    Cantidad de artículos: <span class="snipcart-total-items"></span>
+    Total: <span class="snipcart-total-price"></span>
+</div>
+      </div>
+    </div>
+  </div>
 
 <!-- End page content -->
 </div>
