--- a/store.html
+++ b/store.html
@@ -25,8 +25,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
   <a href="#productos" onclick="w3_close()" class="w3-bar-item w3-button">PRODUCTOS</a> 
   <a href="#sobre" onclick="w3_close()" class="w3-bar-item w3-button">SOBRE</a> 
   <a href="#contacto" onclick="w3_close()" class="w3-bar-item w3-button">CONTACTO</a>
-  <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-button snipcart-checkout">CARRITO</a>
-  <a href="#" onclick="document.getElementById('id01').style.display='block'" class="w3-bar-item w3-button w3-button">SUMMARY</a>
+  <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-button snipcart-checkout"><i class="fa fa-shopping-cart"></i>CARRITO</a>
 </nav>
 
 <!-- Top menu on small screens -->
@@ -126,26 +125,6 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
   data-autopop="false">
   </script>
 <!-- modal -->
-  <div id="id01" class="w3-modal">
-    <div class="w3-modal-content">
-      <div class="w3-container">
-        <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">&times;</span>
-        <div class="snipcart-summary">
-    <a href="#" class="snipcart-user-email snipcart-user-profile">
-        RESUMEN
-    </a>
-</div>
-<div>
-    CONTENIDO
-</div>
-<div class="snipcart-summary">
-    Cantidad de artículos: <span class="snipcart-total-items"></span>
-    Total: <span class="snipcart-total-price"></span>
-</div>
-      </div>
-    </div>
-  </div>
-
 <!-- End page content -->
 </div>
 
