--- a/store.html
+++ b/store.html
@@ -43,7 +43,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
   <!-- Push down content on small screens --> 
   <div class="w3-hide-large" style="margin-top:83px"></div>
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="https://alutecs.com/tecmedia/2018/03/ecommerce-trends-1024x500-1024x500.jpg" alt="store" width="1500" height="800">
+  <img class="w3-image" src="https://amlash.askiran.com/quicktask/doc/Themes/Askiran/images/bg_page2.jpg" alt="store" width="1500" height="800">
   <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>WILL</b></span> <span class="w3-hide-small w3-text-light-grey">store</span></h1>
   </div>
