--- a/store.html
+++ b/store.html
@@ -30,7 +30,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 
 <!-- Top menu on small screens -->
 <header class="w3-container w3-top w3-hide-large w3-white w3-xlarge w3-padding-16">
-  <span class="w3-left w3-padding"><b>WILL</b> store</span>
+  <span class="w3-left w3-padding"><span class="w3-padding w3-black w3-opacity-min"><b>WILL</b></span> store</span>
   <a href="javascript:void(0)" class="w3-right w3-button w3-white" onclick="w3_open()">☰</a>
 </header>
 
@@ -42,12 +42,6 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 
   <!-- Push down content on small screens --> 
   <div class="w3-hide-large" style="margin-top:83px"></div>
-<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="https://amlash.askiran.com/quicktask/doc/Themes/Askiran/images/bg_page2.jpg" alt="store" width="1500" height="800">
-  <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>WILL</b></span> <span class="w3-hide-small w3-text-light-grey">store</span></h1>
-  </div>
-</header>
 
   <!-- Project Section -->
   <div class="w3-row-padding" id="productos">
