--- a/store.html
+++ b/store.html
@@ -21,7 +21,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
-  <h3 class="w3-padding-64 w3-center"><b>WILL</b> store</h3>
+  <h3 class="w3-padding-64 w3-center"><span class="w3-padding w3-black w3-opacity-min"><b>WILL</b></span> store</h3>
   <a href="#productos" onclick="w3_close()" class="w3-bar-item w3-button">PRODUCTOS</a> 
   <a href="#sobre" onclick="w3_close()" class="w3-bar-item w3-button">SOBRE</a> 
   <a href="#contacto" onclick="w3_close()" class="w3-bar-item w3-button">CONTACTO</a>
