--- a/store.html
+++ b/store.html
@@ -70,7 +70,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
           <p class="w3-opacity">$100.00</p>
           <p>Descripción del producto 2</p>
           <p><button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="2"
-    data-item-name="PRODUCTO 2" data-item-price="100.00" data-item-description="producto 2" data-item-url="https://yosoywill.github.io/chatphp/store">COMPRAR</button></p>
+    data-item-name="PRODUCTO 2" data-item-price="100.00" data-item-description="producto 2" data-item-url="https://yosoywill.github.io/chatphp/store" data-item-file-guid"769dc4bb-2016-45d2-81ac-a4f62c1be633">COMPRAR</button></p>
         </div>
       </div>
     </div>
