--- a/index.html
+++ b/index.html
@@ -2,7 +2,19 @@
 <html lang="es">
 <title>TIENDA DEMO WILL</title>
 <meta charset="UTF-8">
+ <meta name="title" content="Will Store">
+<meta name="description" content="Ejemplo de tienda online para comercio electronico will Store">
+<meta name="keywords" content="online, comercio electronico, shopping, venta, internet, comercio, electronico">
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="Spanish">
+<meta name="revisit-after" content="2 days">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta property="og:title" content="tienda online" />
+<meta property="og:type" content="tienda" />
+<meta property="og:url" content="http://willstore.ga/" />
+<meta property="og:description" content="Ejemplo de tienda para comercio en linea" />
+<meta property="og:site_name" content="Will Store"/>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
