--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <p class="w3-opacity">¢1000.00</p>
                         <p>Descripción del producto 1</p>
                         <p>
-                            <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="1" data-item-name="PRODUCTO 1" data-item-price="1000.00" data-item-description="producto 1" data-item-url="https://yosoywill.github.io/chatphp/store">COMPRAR</button>
+                            <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="1" data-item-name="PRODUCTO 1" data-item-price="1000.00" data-item-description="producto 1" data-item-url="https://willstore.ga">COMPRAR</button>
                         </p>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                         <p class="w3-opacity">¢2000.00</p>
                         <p>Descripción del producto 2</p>
                         <p>
-                            <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="2" data-item-name="PRODUCTO 2" data-item-price="200.00" data-item-description="producto 2" data-item-url="https://yosoywill.github.io/chatphp/store" data-item-file-guid="95892041-10f5-4616-ac7c-d36dc32dacd9">COMPRAR</button>
+                            <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="2" data-item-name="PRODUCTO 2" data-item-price="200.00" data-item-description="producto 2" data-item-url="https://willstore.ga" data-item-file-guid="95892041-10f5-4616-ac7c-d36dc32dacd9">COMPRAR</button>
                         </p>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                         <p class="w3-opacity">¢3000.00</p>
                         <p>Descripción del producto 3</p>
                         <p>
-                            <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="3" data-item-name="PRODUCTO 3" data-item-price="3000.00" data-item-description="producto 1" data-item-url="https://yosoywill.github.io/chatphp/store">COMPRAR</button>
+                            <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="3" data-item-name="PRODUCTO 3" data-item-price="3000.00" data-item-description="producto 1" data-item-url="https://willstore.ga">COMPRAR</button>
                         </p>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                         <p class="w3-opacity">¢4000.00</p>
                         <p>Descripción del producto 4</p>
                         <p>
-                            <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="4" data-item-name="PRODUCTO 3" data-item-price="4000.00" data-item-description="producto 3" data-item-url="https://yosoywill.github.io/chatphp/store">COMPRAR</button>
+                            <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="4" data-item-name="PRODUCTO 3" data-item-price="4000.00" data-item-description="producto 3" data-item-url="https://willstore.ga">COMPRAR</button>
                         </p>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                         <p class="w3-opacity">¢5000.00</p>
                         <p>Descripción del producto 5</p>
                         <p>
-                            <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="5" data-item-name="PRODUCTO 5" data-item-price="5000.00" data-item-description="producto 5" data-item-url="https://yosoywill.github.io/chatphp/store">COMPRAR</button>
+                            <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="5" data-item-name="PRODUCTO 5" data-item-price="5000.00" data-item-description="producto 5" data-item-url="https://willstore.ga">COMPRAR</button>
                         </p>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
                         <p class="w3-opacity">¢5000.00</p>
                         <p>Descripción del producto 6</p>
                         <p>
-                            <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="6" data-item-name="PRODUCTO 6" data-item-price="6000.00" data-item-description="producto 6" data-item-url="https://yosoywill.github.io/chatphp/store">COMPRAR</button>
+                            <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="6" data-item-name="PRODUCTO 6" data-item-price="6000.00" data-item-description="producto 6" data-item-url="https://"willstore.ga>COMPRAR</button>
                         </p>
                     </div>
                 </div>
