--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <p class="w3-opacity">¢5000.00</p>
                         <p>Descripción del producto 6</p>
                         <p>
-                            <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="6" data-item-name="PRODUCTO 6" data-item-price="6000.00" data-item-description="producto 6" data-item-url="https://"willstore.ga>COMPRAR</button>
+                            <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="6" data-item-name="PRODUCTO 6" data-item-price="6000.00" data-item-description="producto 6" data-item-url="https://willstore.ga">COMPRAR</button>
                         </p>
                     </div>
                 </div>
