--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-<script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" id="snipcart" data-api-key="YjE4M2MzNWYtYzllZi00ZGM2LWJmYWQtYmM0MTE3YjUwZjBiNjM2OTAzNjA1NzIxODEyMDQy" data-autopop="false"></script>
-<link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" type="text/css" rel="stylesheet" />
+<link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.0/default/snipcart.css" />
+
 <style>
     html,
     body,
@@ -219,7 +219,8 @@
   document.getElementById("modal01").style.display = "block";
 }
     </script>
-
+     <div hidden id="snipcart" data-api-key="YjE4M2MzNWYtYzllZi00ZGM2LWJmYWQtYmM0MTE3YjUwZjBiNjM2OTAzNjA1NzIxODEyMDQy"></div>
+<script src="https://cdn.snipcart.com/themes/v3.0.0/default/snipcart.js"></script>
 </body>
 
 </html>
