--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
              });
          });
       </script>
-      <div hidden id="snipcart" data-api-key="YjE4M2MzNWYtYzllZi00ZGM2LWJmYWQtYmM0MTE3YjUwZjBiNjM2OTAzNjA1NzIxODEyMDQy"></div>
-      <script src="https://cdn.snipcart.com/themes/v3.0.0/default/snipcart.js"></script
+      
+<div id="snipcart" data-api-key="YjE4M2MzNWYtYzllZi00ZGM2LWJmYWQtYmM0MTE3YjUwZjBiNjM2OTAzNjA1NzIxODEyMDQy" hidden></div>
+<script src="https://cdn.snipcart.com/themes/v3.0.20/default/snipcart.js"></script>
    </body>
 </html>
