--- a/index.html
+++ b/index.html
@@ -83,21 +83,21 @@
                      <td><strong>Español </strong>
                         <br/> Busca resolver dudas sobre la asignatura de español en primaria y secundaria
                      </td>
-                     <td> <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="ed-español" data-item-name="Español" data-item-price="5000.00" data-item-description="Busca resolver dudas sobre la asignatura de español en primaria y secundaria" data-item-url="http://comolohago.tk" data-item-file-guid="e791e3e5-c87a-44ae-ba4d-6bda24e645b9">COMPRAR</button></td>
+                     <td> <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="ed-español" data-item-name="Español" data-item-price="5000.00" data-item-description="Busca resolver dudas sobre la asignatura de español en primaria y secundaria" data-item-url="https://yosoywill.github.io/store" data-item-file-guid="e791e3e5-c87a-44ae-ba4d-6bda24e645b9">COMPRAR</button></td>
                   </tr>
                   <tr>
                      <td>Educación</td>
                      <td><strong>Matemáticas</strong>
                         <br/> Busca resolver dudas sobre la asignatura de matemáticas en primaria y secundaria
                      </td>
-                     <td> <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="ed-mate" data-item-name="Matemáticas" data-item-price="5000.00" data-item-description="Busca resolver dudas sobre la asignatura de Matemáticas en primaria y secundaria" data-item-url="http://comolohago.tk" data-item-file-guid="e791e3e5-c87a-44ae-ba4d-6bda24e645b9">COMPRAR</button></td>
+                     <td> <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="ed-mate" data-item-name="Matemáticas" data-item-price="5000.00" data-item-description="Busca resolver dudas sobre la asignatura de Matemáticas en primaria y secundaria" data-item-url="https://yosoywill.github.io/store" data-item-file-guid="e791e3e5-c87a-44ae-ba4d-6bda24e645b9">COMPRAR</button></td>
                   </tr>
                   <tr>
                      <td>Educación</td>
                      <td><strong>Ciencias</strong>
                         <br/> Busca resolver dudas sobre la asignatura de ciencias, física, quimica o biología en primaria y secundaria
                      </td>
-                     <td> <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="ed-ciencias" data-item-name="Ciencias" data-item-price="5000.00" data-item-description="Busca resolver dudas sobre la asignatura de Ciencias en primaria y secundaria" data-item-url="http://comolohago.tk" data-item-file-guid="e791e3e5-c87a-44ae-ba4d-6bda24e645b9">COMPRAR</button></td>
+                     <td> <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="ed-ciencias" data-item-name="Ciencias" data-item-price="5000.00" data-item-description="Busca resolver dudas sobre la asignatura de Ciencias en primaria y secundaria" data-item-url="https://yosoywill.github.io/store" data-item-file-guid="e791e3e5-c87a-44ae-ba4d-6bda24e645b9">COMPRAR</button></td>
                      >
                   </tr>
                   <tr>
@@ -105,14 +105,14 @@
                      <td><strong>Estudios sociales</strong>
                         <br/> Busca resolver dudas sobre la asignatura de Estudios sociales y cívica en primaria y secundaria
                      </td>
-                     <td> <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="ed-sociales" data-item-name="Estudios Sociales y Cívica" data-item-price="5000.00" data-item-description="Busca resolver dudas sobre la asignatura de Estudios sociales y cívica en primaria y secundaria" data-item-url="http://comolohago.tk" data-item-file-guid="e791e3e5-c87a-44ae-ba4d-6bda24e645b9">COMPRAR</button></td>
+                     <td> <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="ed-sociales" data-item-name="Estudios Sociales y Cívica" data-item-price="5000.00" data-item-description="Busca resolver dudas sobre la asignatura de Estudios sociales y cívica en primaria y secundaria" data-item-url="https://yosoywill.github.io/store" data-item-file-guid="e791e3e5-c87a-44ae-ba4d-6bda24e645b9">COMPRAR</button></td>
                   </tr>
                   <tr>
                      <td>Educación</td>
                      <td><strong>Inglés</strong>
                         <br/> Busca resolver dudas sobre la asignatura de Inglés en primaria y secundaria
                      </td>
-                     <td> <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="ed-ingles" data-item-name="Inglés" data-item-price="5000.00" data-item-description="Busca resolver dudas sobre la asignatura de inglés en primaria y secundaria" data-item-url="http://comolohago.tk" data-item-file-guid="e791e3e5-c87a-44ae-ba4d-6bda24e645b9">COMPRAR</button></td>
+                     <td> <button class="w3-button w3-light-grey w3-block snipcart-add-item" data-item-id="ed-ingles" data-item-name="Inglés" data-item-price="5000.00" data-item-description="Busca resolver dudas sobre la asignatura de inglés en primaria y secundaria" data-item-url="https://yosoywill.github.io/store" data-item-file-guid="e791e3e5-c87a-44ae-ba4d-6bda24e645b9">COMPRAR</button></td>
                   </tr>
                </tbody>
             </table>
