--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          </div>
       </div>
       <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-      <div id="navDemo" class="w3-bar-block w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+      <div id="navDemo" class="w3-bar-block w3-light-grey w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
          <a href="#how" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CÓMO FUNCIONA</a>
          <a href="#servicios" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">SERVICIOS DISPONIBLES</a>
          <a href="#contacto" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACTO</a>
